fix: ramptrainer ios css broken on safari
forgot to test safari!

safari does not support nested css selectors

--- a/src/pages/ramptrainer/style.css
+++ b/src/pages/ramptrainer/style.css
@@ -1,52 +1,54 @@
+#ramptrainer-logo {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 90px;
+  text-align: center;
+  font-style: italic;
+  font-weight: 700;
+  background-color: black;
+  border-radius: 10%;
+  margin: 0.3em;
+
+  height: 150px;
+  width: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white
+}
+
 .ramp-trainer {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
 
-  h1 {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 3em;
-    font-style: italic;
-    font-weight: 800;
-  }
+.ramp-trainer h1 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 3em;
+  font-style: italic;
+  font-weight: 800;
+}
 
-  #ramptrainer-logo {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 90px;
-    text-align: center;
-    font-style: italic;
-    font-weight: 700;
-    background-color: black;
-    border-radius: 10%;
-    margin: 0.3em;
-    
-    height: 150px;
-    width: 150px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white
-  }
+.ramp-trainer div {
+  margin: 1.5em
+}
 
-  div {
-    margin: 1.5em
-  }
 
-  @media (min-width: 768px) {
-		p {
-      max-width: 40vw;
-		}
-	}
-
+@media (min-width: 768px) {
   p {
-    font-size: 1.2em;
-    margin: 1rem;
-    line-height: 1.5;
-    text-align: center;
+    max-width: 40vw;
   }
+}
 
-  a {
-    color: #000 !important;
-  }
+
+.ramp-trainer p {
+  font-size: 1.2em;
+  margin: 1rem;
+  line-height: 1.5;
+  text-align: center;
+}
+
+.ramp-trainer a {
+  color: #000 !important;
 }
